--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "enc_password"
 version = "0.1.0"
 authors = ["Karl Brightman <karl@karlbright.org>"]
+description = "Simple rust implementation of enc_password format and creation used by Instagram"
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [dependencies]
